Source/WebCore/Modules/mediastream/UserMediaRequest.h
@@ -64,7 +64,8 @@ public:
     void start();
 
     void succeed(PassRefPtr<MediaStreamDescriptor>);
-    void fail();
+    void fail(const String& description);
+    void failConstraint(const String& constraintName, const String& description);
 
     MediaConstraints* audioConstraints() const;
     MediaConstraints* videoConstraints() const;
